syntax = "proto3";

option csharp_namespace = "Yippy.Templating";

package templateresolver;

service TemplateResolver {
  rpc GetEmail (ResolveEmailTemplateRequest) returns (ResolveEmailTemplateResponse);
  rpc GetSms (ResolveSmsTemplateRequest) returns (ResolveSmsTemplateResponse);
}

message ResolveEmailTemplateRequest {
  string templateName = 1;
  map<string, string> variables = 2;
}

message ResolveEmailTemplateResponse {
  string fromName = 1;
  string fromEmail = 2;
  string object = 3;
  string rawBody = 4;
  map<string, string> unmappedVariables = 5;
}

message ResolveSmsTemplateRequest {
  string templateName = 1;
  map<string, string> variables = 2;
}

message ResolveSmsTemplateResponse {
  string fromName = 1;
  string rawBody = 2;
  map<string, string> unmappedVariables = 3;
}